# kobodeluxe

./: BUILDDEFS  CMakeLists.txt  ChangeLog  Info.plist.in  KoboPlayer  Makefile.am  Makefile.in  README  README.html  README.jp  README.md  README.osx  README.sfont  README.xkobo  README.xkobo.jp  TODO  aclocal.m4  aconfig.h.in  build-packages  buildconfig.h.cmake  buildpkg.sh  cfg-beta  cfg-cross-release  cfg-profile  cfg-release  cfg-work  cfg-work-opt  cfgform.cpp  cfgparse.cpp  cfgparse.h  config.h  configure  configure.in  dashboard.cpp  dashboard.h  enemies.cpp  enemies.h  enemy.cpp  filemap.cpp  filemap.h  (+22 more)
data/: Makefile.am  Makefile.in
data/gfx/: Makefile.am  Makefile.in
data/sfx/: Makefile.am  Makefile.in
eel/: Makefile.am  Makefile.in  _e_script.h  e_builtin.c  e_builtin.h  e_getargs.c  e_lexer.h  e_path.c  e_register.c  e_register.h  e_symtab.c  e_symtab.h  eel-lang.txt  eel.c  eel.h
graphics/: Makefile.am  Makefile.in  cs.h  display.cpp  display.h  filters.c  region.c  sofont.cpp  sofont.h  toolkit.cpp  toolkit.h  vidmodes.h  window.cpp  window.h
icons/: net.olofson.kobodeluxe.desktop
icons/windows/: kobodl.rc
sound/: Makefile.am  Makefile.in  a_channel.c  a_channel.h  a_commands.c  a_control.c  a_delay.c  a_delay.h  a_filters.c  a_filters.h  a_limiter.c  a_limiter.h  a_midicon.c  a_midicon.h  a_midifile.c  a_midifile.h  a_patch.c  a_patch.h  a_pitch.c  a_pitch.h  a_plugin.c  a_plugin.h  a_sequencer.h  a_tools.h  a_voice.h  a_wave.c  a_wca.c  audio.c  audio.h  audiodev.c  ptable.h  sfifo.h
src/: CMakeLists.txt  cfgform.h  config.h  enemies.cpp  enemies.h  filemap.cpp  filemap.h  form.h  game.cpp  game.h  gamectl.cpp  gamectl.h  gamestate.cpp  gamestate.h  kobo.cpp  kobo.h  logger.h  manage.cpp  manage.h  map.cpp  myship.h  options.cpp  options.h  pfile.cpp  pfile.h  prefs.cpp  prefs.h  radar.h  random.cpp  score.cpp  screen.cpp  sound.cpp  states.h
src/eel/: e_lexer.c  e_script.c  e_script.h  e_util.c  e_util.h  eel-comp-src.txt
src/graphics/: cs.c  filters.h  gfxengine.cpp  gfxengine.h  glSDL.c  glSDL.h  region.h  sprite.c  sprite.h  vidmodes.c
src/sound/: a_agw.c  a_agw.h  a_bus.c  a_bus.h  a_commands.h  a_control.h  a_events.c  a_events.h  a_globals.c  a_globals.h  a_math.h  a_midi.c  a_midi.h  a_midisock.c  a_midisock.h  a_mixers.h  a_sequencer.c  a_struct.c  a_struct.h  a_types.h  a_voice.c  a_wave.h  a_wca.h  a_wcaosc.h  audiodev.h  sfifo.c
